modules/cli/src/test/resources/good/wfchoice/gdo/Test02.scr
module good.wfchoice.gdo.Test02;


global protocol Foo(role A, role B)
{
	1() from A to B;
	choice at A
	{
		2() from A to B;
	}
	or
	{
		do Bar(A, B);
	}
}


global protocol Bar(role A, role B)
{
	do Foo(A, B);
}

