modules/cli/src/test/resources/bad/wfchoice/oldwfchoice/globals/gchoice/Choice09.scr
module bad.wfchoice.oldwfchoice.gchoice.Choice09;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
	}
	or
	{
		2() from A to B;
	}
	or
	{
		2() from A to B;
	}
}

